@@ -1195,11 +1195,13 @@ Bool_t TGo4AnalysisObjectManager::SetParameterStatus(const char* name, TGo4Param
 
 
 
-TGo4Parameter * TGo4AnalysisObjectManager::GetParameter(const char * name)
+TGo4Parameter * TGo4AnalysisObjectManager::GetParameter(const char * name, const char* parameter_class)
 {
    TRACE((11,"TGo4AnalysisObjectManager::GetParameter(char*)",__LINE__, __FILE__));
    TGo4Parameter* rev=dynamic_cast<TGo4Parameter *> (FindObjectInFolder(fxParameterDir,name));
    if(rev==0) rev= dynamic_cast<TGo4Parameter *> (FindObjectInFolder(fxUserDir,name));
+   if ((rev!=0) && (parameter_class!=0))
+      if (!rev->InheritsFrom(parameter_class)) rev=0;
    return rev;
 }
 
