@@ -153,7 +153,7 @@ public:
 	TH1* GetHistogram(const char* name);
 
 	/** Get parameter from go4 framework. Shortcut forwarded to analysis instance */
-	TGo4Parameter* GetParameter(const char* name);
+	TGo4Parameter* GetParameter(const char* name, const char* par_class = 0);
 
 	/** Get condition from go4 framework. Shortcut forwarded to analysis instance */
 	TGo4Condition* GetAnalysisCondition(const char* name);
