@@ -24,7 +24,9 @@ Changes in Go4 v4.5.x (Winter 2011/12)
 1. Bugfix in gui shutdown: circular deletion of mainwindow and timer could lead to crash on suse 12.1
    Also changed details of shutdown mechanism, hope to fix the "hanging analysis with 99% cpu" problems
    (this may happen when gui terminates before analysis was properly disconnected).
-2. Adjusted Makefile.config for suse 12.1   
+2. Adjusted Makefile.config for suse 12.1
+3. Add in MakeParameter method possibility to execute setup macro
+4. In GetParameter method one could optionally specify class name, which will be verified    
 
 
 Changes in Go4 v4.5.1 (November 2011)
